# MailDesk-Lightweight

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENTERPRISE_FEATURES.md  LICENSE  README.md  RELEASE_README.txt  SECURITY.md  SPEC.md  THIRD_PARTY_NOTICES.md  build.py  build_macos.py  mailbox-manager-macos.spec  mailbox-manager.spec  pyproject.toml  release.py  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  macos-release.yml  publish-macos-artifacts.yml
assets/: version_info.txt
docs/: MACOS.md  MACOS_RELEASE_NOTES.md  RELEASE_NOTES_0.3.4.md  RELEASE_NOTES_0.3.5.md  RELEASE_NOTES_0.3.6.md  RELEASE_NOTES_0.3.7.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.4.1.md  RELEASE_NOTES_0.4.3.md  WINDOWS_RELEASE_NOTES_0.3.2.md
docs/releases/: v0.4.8.md
examples/: accounts.csv  accounts.json  accounts.txt
src/mailbox_manager/: __init__.py  __main__.py  app.py  config.py
tasks/: plan.md  todo.md
tests/gui/: test_dashboard.py  test_dashboard_integration.py  test_dialog_sizing.py  test_email_body_view.py  test_gui.py  test_mail_viewer_translation.py  test_main_window_translation.py  test_message_display_gui.py  test_modern_style.py  test_motion.py  test_responsive_layout.py  test_send_logging.py  test_settings_integration.py  test_theme_popups.py  test_update_dialog.py  test_update_integration.py  test_usage_guide.py  test_workers.py
tests/integration/: test_batch_import_flow.py  test_enterprise_repository.py  test_import_pipeline.py  test_repository.py
tests/services/: test_update_service.py
tests/unit/: test_app_settings.py  (+27 more)
(+72 files in other folders)
