[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maildesk"
version = "0.3.6"
description = "Windows and macOS desktop mailbox manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["email", "imap", "outlook", "pyside6", "windows"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Email",
]
dependencies = [
  "cryptography>=43,<46",
  "httpx>=0.27,<1",
  "PySide6>=6.7,<7",
  "pyotp>=2.9,<3",
  "PySocks>=1.7,<2",
  "socksio>=1.0,<2",
  "pywin32>=306; platform_system == 'Windows'",
  "keyring>=25,<26; platform_system == 'Darwin'",
]

[project.scripts]
maildesk = "mailbox_manager.__main__:main"

[project.urls]
Homepage = "https://github.com/17sho/MailDesk"
Documentation = "https://github.com/17sho/MailDesk#readme"
Issues = "https://github.com/17sho/MailDesk/issues"
Source = "https://github.com/17sho/MailDesk"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]
